Format comments & tweak color scheme for test

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,9 +15,9 @@
 
 
 
+# GENERAL SETTINGS: {{{
 #*****************************************************************************
-# General Settings:
-#*****************************************************************************
+
 # Terminal Environment
 set   -sg escape-time 0
 set   -g  terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -45,10 +45,10 @@ set   -g  buffer-limit 500
 
 
 
+# }}}
+# KEY-BINDINGS: {{{
+#*****************************************************************************
 
-#*****************************************************************************
-# Key-Bindings:
-#*****************************************************************************
 # Unbind the Unnecessary
 unbind C-b
 unbind C-o
@@ -270,10 +270,10 @@ unbind M-d          ; bind -n     M-d       detach-client
 
 
 
+# }}}
+# WINDOWS: {{{
+#*******************************************************************************
 
-#*******************************************************************************
-# Windows:
-#*******************************************************************************
 # Use UTF-8 character set
 setw  -g  utf8 on
 #-------------------------------------------------------------------------------
@@ -327,10 +327,10 @@ setw  -g  remain-on-exit off
 
 
 
+# }}}
+# STATUS/COMMAND/MESSAGE LINE: {{{
+#*******************************************************************************
 
-#*******************************************************************************
-# Status/Command/Message Line:
-#*******************************************************************************
 # Status Line Settings
 set   -g  status-interval 60
 set   -g  status-keys emacs
@@ -378,12 +378,12 @@ set   -g  status-right '#[fg=white]#[fg=magenta]%I:%M %p #[fg=white]|#[fg=magent
 
 
 
-#*******************************************************************************
-# Color Scheme:
+# }}}
+# COLOR SCHEME: {{{
 #*******************************************************************************
 # Status Line Defaults
 set   -g  status-fg white
-set   -g  status-bg black
+set   -g  status-bg blue
 set   -g  status-attr bright
 #-------------------------------------------------------------------------------
 
@@ -444,4 +444,6 @@ set   -g  pane-active-border-bg black
 
 
 
-source-file ~/.tmux.conf # vim: set ft=tmux:
+# source-file ~/.tmux.conf
+# vim: set ft=tmux:
+# vim: fdm=marker:
