--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 #	Description:    Configuration file for the terminal multiplexer tmux.
 # Author:         Fontaine Cook <fontaine.cook@pearance.com>
 # Maintainer:     Fontaine Cook <fontaine.cook@pearance.com>
-#	Last Modified:  08/10/2011
+#	Last Modified: Wed Oct 24, 2012  05:30PM
 #------------------------------------------------------------------------------
 
 # TODO: http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/
@@ -383,7 +383,7 @@ set   -g  status-right '#[fg=white]#[fg=magenta]%I:%M %p #[fg=white]|#[fg=magent
 #*******************************************************************************
 # Status Line Defaults
 set   -g  status-fg white
-set   -g  status-bg blue
+set   -g  status-bg colour236
 set   -g  status-attr bright
 #-------------------------------------------------------------------------------
 
