Misc mods to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@
 #------------------------------------------------------------------------------
 
 # TODO: http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/
-# TODO" http://bombayrain.posterous.com/tmux-and-vim-configuration
+# TODO: http://bombayrain.posterous.com/tmux-and-vim-configuration
 # TODO: https://gist.github.com/721200
 # TODO: http://robots.thoughtbot.com/post/2641409235/a-tmux-crash-course
 # TODO: http://tonkersten.com/2011/07/104-switching-to-tmux/
@@ -152,7 +152,7 @@ unbind M-/    ; bind -n   M-/     command-prompt -p "/" "find-window %%"
 
 
 # Window Spliting
-unbind v      ; bind      v       split-window -h
+unbind v      ; bind -n   M-v     split-window -h
 unbind h      ; bind      h       split-window -v
 #-------------------------------------------------------------------------------
 
@@ -383,7 +383,7 @@ set   -g  status-right '#[fg=white]#[fg=magenta]%I:%M %p #[fg=white]|#[fg=magent
 #*******************************************************************************
 # Status Line Defaults
 set   -g  status-fg white
-set   -g  status-bg colour236
+set   -g  status-bg black
 set   -g  status-attr bright
 #-------------------------------------------------------------------------------
 
@@ -437,13 +437,13 @@ set   -g  display-panes-colour white
 # Window Pane Borders
 set   -g  pane-border-fg black
 set   -g  pane-border-bg black
-set   -g  pane-active-border-fg black
-set   -g  pane-active-border-bg black
+set   -g  pane-active-border-fg colour238
+set   -g  pane-active-border-bg colour234
 #-------------------------------------------------------------------------------
 # }}}
 
 
 
 # source-file ~/.tmux.conf
-# vim: set ft=tmux:
-# vim: fdm=marker:
+
+# vim:ft=tmux:fdm=marker:
