--- a/tmux.conf
+++ b/tmux.conf
@@ -354,7 +354,7 @@ bind  s   set status
 
 # Left Side Status Bar
 
-set   -g  status-left ' #[fg=white]#S#[bg=black,fg=magenta,dim]:Shelltopia#[fg=white] |'
+set   -g  status-left ' #[fg=white]#S#[bg=black,fg=magenta,dim]:Pearance#[fg=white] |'
 set   -g  status-left-length 30
 #-------------------------------------------------------------------------------
 
