Add header info

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,22 +1,16 @@
-# Title:          tmux.conf
-#	Description:    Configuration file for the terminal multiplexer tmux.
-# Author:         Fontaine Cook <fontaine.cook@pearance.com>
-# Maintainer:     Fontaine Cook <fontaine.cook@pearance.com>
-#	Last Modified: Wed Oct 24, 2012  05:30PM
-#------------------------------------------------------------------------------
+# vim:ft=tmux:fdm=marker:
+#  _                                          __
+# | |_ _ __ ___  _   ___  __  ___ ___  _ __  / _|
+# | __| '_ ` _ \| | | \ \/ / / __/ _ \| '_ \| |_
+# | |_| | | | | | |_| |>  < | (_| (_) | | | |  _|
+#  \__|_| |_| |_|\__,_/_/\_(_)___\___/|_| |_|_|
+#
+# Authors:       Fontaine Cook, Various Contributors
+# Description:   Configuration file for the terminal multiplexer tmux.
+#-------------------------------------------------------------------------------
 
-# TODO: http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/
-# TODO: http://bombayrain.posterous.com/tmux-and-vim-configuration
-# TODO: https://gist.github.com/721200
-# TODO: http://robots.thoughtbot.com/post/2641409235/a-tmux-crash-course
-# TODO: http://tonkersten.com/2011/07/104-switching-to-tmux/
-# TODO: http://mutelight.org/articles/practical-tmux
-# TODO: http://cheasy.org/tmux.pdf
-
-
-
-# GENERAL SETTINGS: {{{
-#*****************************************************************************
+# GENERAL SETTINGS {{{
+#*******************************************************************************
 
 # Terminal Environment
 set   -sg escape-time 0
@@ -46,9 +40,10 @@ set   -g  default-shell /bin/zsh
 
 
 
+
 # }}}
-# KEY-BINDINGS: {{{
-#*****************************************************************************
+# KEY-BINDINGS {{{
+#*******************************************************************************
 
 # Unbind the Unnecessary
 unbind C-b
@@ -130,7 +125,7 @@ unbind M-n    ; bind -n   M-n     command-prompt -p "Rename #W" "rename-window %
 
 
 # Window Navigation
-                bind      M-a     last-window
+								bind      M-a     last-window
 unbind M-`    ; bind -n   M-`     next-window
 unbind M-~    ; bind -n   M-~     previous-window
 unbind M-1    ; bind -n   M-1     select-window -t 1
@@ -271,8 +266,9 @@ unbind M-d          ; bind -n     M-d       detach-client
 
 
 
+
 # }}}
-# WINDOWS: {{{
+# WINDOWS {{{
 #*******************************************************************************
 
 # Use UTF-8 character set
@@ -329,7 +325,7 @@ setw  -g  remain-on-exit off
 
 
 # }}}
-# STATUS/COMMAND/MESSAGE LINE: {{{
+# STATUS/COMMAND/MESSAGE LINE {{{
 #*******************************************************************************
 
 # Status Line Settings
@@ -380,7 +376,7 @@ set   -g  status-right '#[fg=white]#[fg=magenta]%I:%M %p #[fg=white]|#[fg=magent
 
 
 # }}}
-# COLOR SCHEME: {{{
+# COLOR SCHEME {{{
 #*******************************************************************************
 # Status Line Defaults
 set   -g  status-fg white
@@ -434,10 +430,26 @@ set   -g  pane-border-bg black
 set   -g  pane-active-border-fg colour238
 set   -g  pane-active-border-bg colour234
 #-------------------------------------------------------------------------------
+
+
+
+
+
+
+
+
+
+
 # }}}
+# WRAP {{{
+source ~/dotfiles/zsh.local/tmux.conf.local
 
+# TODO: http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/
+# TODO: http://bombayrain.posterous.com/tmux-and-vim-configuration
+# TODO: https://gist.github.com/721200
+# TODO: http://robots.thoughtbot.com/post/2641409235/a-tmux-crash-course
+# TODO: http://tonkersten.com/2011/07/104-switching-to-tmux/
+# TODO: http://mutelight.org/articles/practical-tmux
+# TODO: http://cheasy.org/tmux.pdf
 
-
-# source-file ~/.tmux.conf
-
-# vim:ft=tmux:fdm=marker:
+# }}}
