Center tmux tabs and simplify split bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ set   -g  default-terminal screen
 set   -g  visual-bell off
 set   -g  mouse-select-pane off #
 set   -g  default-terminal "screen-256color"
-set   -g  history-limit 10000
+set   -g  history-limit 100000
 set   -g  repeat-time 1000
 set   -g  base-index 1
 set   -g  set-titles on
@@ -30,6 +30,7 @@ set   -g  bell-action none
 set   -g  prefix M-a
 set   -g  buffer-limit 500
 set   -g  default-shell /bin/zsh
+setw  -g  aggressive-resize on
 #-------------------------------------------------------------------------------
 
 
@@ -148,8 +149,8 @@ unbind M-/    ; bind -n   M-/     command-prompt -p "/" "find-window %%"
 
 
 # Window Spliting
-unbind v      ; bind -n   M-v     split-window -h
-unbind h      ; bind      h       split-window -v
+unbind v      ; bind -n   M-\     split-window -h
+unbind h      ; bind -n   M--     split-window -v
 #-------------------------------------------------------------------------------
 
 
@@ -225,7 +226,7 @@ unbind M-M    ; bind -n   M-M     command-prompt -p "Man page (new window):" "ne
 
 
 # HTOP in Split Window
-bind  "~" split-window "exec htop"
+bind  -n M-F12 split-window -h "exec nmon"
 #-------------------------------------------------------------------------------
 
 
@@ -329,9 +330,10 @@ setw  -g  remain-on-exit off
 #*******************************************************************************
 
 # Status Line Settings
+set   -g  status-utf8 on
 set   -g  status-interval 60
 set   -g  status-keys emacs
-set   -g  status-utf8 on
+set   -g  status-justify centre
 #-------------------------------------------------------------------------------
 
 
