--- a/tmux.conf
+++ b/tmux.conf
@@ -155,20 +155,12 @@ unbind h      ; bind -n   M--     split-window -v
 
 
 
-# Window Pane Navigation
-unbind M-Left ; bind -n   M-Left  select-pane -L
-unbind M-Down ; bind -n   M-Down  select-pane -D
-unbind M-Up   ; bind -n   M-Up    select-pane -U
-unbind M-Right; bind -n   M-Right select-pane -R
-#-------------------------------------------------------------------------------
-
-
-
-# Window Pane Navigation (Vim alternate)
-unbind M-h    ; bind -n   M-h     select-pane -L
-unbind M-j    ; bind -n   M-j     select-pane -D
-unbind M-k    ; bind -n   M-k     select-pane -U
-unbind M-l    ; bind -n   M-l     select-pane -R
+# Window Pane Navigation (including vim splits)
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 #-------------------------------------------------------------------------------
 
 
