--- a/tmux.conf
+++ b/tmux.conf
@@ -160,7 +160,6 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 #-------------------------------------------------------------------------------
 
 
@@ -419,10 +418,10 @@ set   -g  display-panes-colour white
 
 
 # Window Pane Borders
-set   -g  pane-border-fg black
-set   -g  pane-border-bg black
-set   -g  pane-active-border-fg colour238
-set   -g  pane-active-border-bg colour234
+set   -g  pane-border-fg '#333333'
+set   -g  pane-border-bg default
+set   -g  pane-active-border-fg '#666666'
+set   -g  pane-active-border-bg default
 #-------------------------------------------------------------------------------
 
 
