Map F5 to clear terminal and better mappings for tmux splits

--- a/tmux.conf
+++ b/tmux.conf
@@ -46,7 +46,7 @@ setw  -g  aggressive-resize on
 # KEY-BINDINGS {{{
 #*******************************************************************************
 
-# Unbind the Unnecessary
+# Unbind the Unnecessary {{{
 unbind C-b
 unbind C-o
 unbind C-z
@@ -93,7 +93,7 @@ unbind PPage
 #-------------------------------------------------------------------------------
 
 
-
+#}}}
 # Prefix Key
 unbind M-a
 bind   M-a    send-prefix
@@ -145,12 +145,13 @@ unbind M-0    ; bind -n   M-0     select-window -t 10
 
 # Window Searching
 unbind M-/    ; bind -n   M-/     command-prompt -p "/" "find-window %%"
+#-------------------------------------------------------------------------------
 
 
 
 # Window Spliting
-unbind v      ; bind -n   M-\     split-window -h
-unbind h      ; bind -n   M--     split-window -v
+                bind -n   M-l     split-window -h
+                bind -n   M-j     split-window -v
 #-------------------------------------------------------------------------------
 
 
@@ -250,6 +251,10 @@ unbind M-N          ; bind -n     M-N     command-prompt -p "Rename #S" "rename-
 unbind M-d          ; bind -n     M-d       detach-client
 #-------------------------------------------------------------------------------
 
+
+# Clear Terminal
+bind -n   F5     send-keys 'C-l'
+#-------------------------------------------------------------------------------
 
 
 
