Update refresh bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -102,8 +102,8 @@ bind   M-a    send-prefix
 
 
 # Reload/Refresh
-unbind M-r    ; bind -n   M-r     source-file ~/.tmux.conf
-unbind M-R    ; bind -n   M-R     refresh-client
+unbind M-R    ; bind -n   M-r     source-file ~/.tmux.conf
+#unbind M-R    ; bind -n   M-R     refresh-client
 #-------------------------------------------------------------------------------
 
 
@@ -150,8 +150,8 @@ unbind M-/    ; bind -n   M-/     command-prompt -p "/" "find-window %%"
 
 
 # Window Spliting
-                bind -n   M-l     split-window -h
-                bind -n   M-j     split-window -v
+unbind l      ; bind -n   M-l     split-window -h
+unbind j      ; bind -n   M-j     split-window -v
 #-------------------------------------------------------------------------------
 
 
@@ -217,7 +217,7 @@ unbind M-M    ; bind -n   M-M     command-prompt -p "Man page (new window):" "ne
 
 
 
-# HTOP in Split Window
+# NMON in Split Window
 bind  -n M-F12 split-window -h "exec nmon"
 #-------------------------------------------------------------------------------
 
@@ -253,7 +253,7 @@ unbind M-d          ; bind -n     M-d       detach-client
 
 
 # Clear Terminal
-bind -n   F5     send-keys 'C-l'
+bind -n   M-r    send-keys 'C-l'
 #-------------------------------------------------------------------------------
 
 
